--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,16 @@
           </div>
         </div>
       </div>
+      <!-- Hemisphere Images -->
+      <div class="row" id="hemispheres">
+        <div class="col-md-8">
+          <h2>Hemispheres</h2>
+          <img
+            src="{{hemispheres}}"
+            class="img-responsive"
+            alt="Responsive image"
+        />
+      </div>
     </div>
   </body>
 </html>
