--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
         <div class="col-md-8">
           <h2>Featured Mars Image</h2>
           <img
-            src="{{mars.featured_image }}"
+            src="{{mars.featured_image}}"
             class="img-responsive"
             alt="Responsive image"
           />
@@ -53,11 +53,13 @@
         <div class="col-md-8">
           <h2>Hemispheres</h2>
           <img
-            src="{{hemispheres}}"
+            src="{% for hemisphere in mars.hemispheres %}"
             class="img-responsive"
             alt="Responsive image"
-        />
+          />
       </div>
     </div>
   </body>
 </html>
+
+<script> console.log({mars}) </script>
