--- a/templates/index.html
+++ b/templates/index.html
@@ -49,16 +49,18 @@
         </div>
       </div>
       <!-- Hemisphere Images -->
+      {% for hemisphere in mars.hemispheres %}
       <div class="row" id="hemispheres">
         <div class="col-md-8">
           <h2>Hemispheres</h2>
           <img
-            src="{% for hemisphere in mars.hemispheres %}"
+            src="{{hemisphere.img_url}}"
             class="img-responsive"
             alt="Responsive image"
           />
       </div>
     </div>
+    {% endfor %}
   </body>
 </html>
 
