--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
       <!-- Hemisphere Images -->
       {% for hemisphere in mars.hemispheres %}
         <div class="col-md-6">
-          <h2>Hemispheres</h2>
+          <h2>"{{hemisphere.title}}"</h2>
           <img
             src="{{hemisphere.img_url}}"
             class="img-responsive"
